tests/NormalTests/paczka1/fuzzy1/95876096.err
Error in line 10: A1 S18 7,5
Error in line 12: Wi9 S646 37,2
Error in line 16: A1 S646 78,4
Error in line 22: A1 S646 280,7
Error in line 24: A1 S987 71,8
Error in line 26: A1 S987 265,7
Error in line 13: Wi9 A1 89,3
Error in line 33: A1 S987 32,9
Error in line 35: A1 S987 24,3
